--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -4,23 +4,17 @@
 
 
 body{
-  background: #ECF0F1;
-
+  background: #fafafc;
+  padding-top: 70px;
 }
 
-.nav-bar{
-  background-color: #ffffff;
+.nav-bar {
+    background-color: #ffffff;
+    z-index: 10000;
+    border-bottom: 1px solid;
+    position: fixed;
 }
 
-.pages-category-card {
-  background-color: #149671;
-  color: #ffffff;
-  text-align: center;
-  height: 276px;
-  overflow: scroll;
-  margin: 10px 20px 10px 0px;
-  width: 276px !important;
-}
 
 hr {
   border: 0;
@@ -38,14 +32,16 @@ hr:after {
   font-size: 18px;
 }
 .page-form {
-  background-color: #ffffff;
-  position: relative;
-  padding: 10px;
-  width: 800px;
-  display: block;
-  margin: 70px auto;
-  color: black;
-  box-shadow: 0 1px 2px #c9cccd;
+    background-color: #ffffff;
+    position: relative;
+    padding: 10px;
+    width: 800px;
+    display: block;
+    margin: 70px auto;
+    color: black;
+    box-shadow: 0 1px 2px #c9cccd;
+    max-height: 500px;
+    overflow: scroll;
   form {
     label{
       color: black;
@@ -134,18 +130,6 @@ hr:after {
   padding-left: 0px !important;
   padding-right: 0px !important;
   margin-left: 17px;
-  .time-line {
-    box-shadow: 0 1px 2px #c9cccd;
-    position: relative;
-    border-left: 1px;
-    width: 100%;
-    height: 200px;
-    background: url("defaulttimeline.png");
-    background-repeat: repeat-x;
-    background-size: 351px 195px;
-    background-position: 0 0;
-    background-color: #6a7180;
-  }
 }
 
 .nav-settings-down {
@@ -248,11 +232,11 @@ hr:after {
 }
 
 .timeline-button {
-  float: right;
-  height: 50px;
-  position: relative;
-  top: 150px;
-  right: 20px;
+    float: right;
+    height: 50px;
+    position: absolute;
+    bottom: 0px;
+    right: 9px;
   ul {
     li{
       display: inline;
@@ -270,6 +254,9 @@ hr:after {
 .page-profile-picture {
   width: 170px;
   height: 170px;
+  position: relative;
+  top: 201px;
+ img{
   position: absolute;
   border: 4px solid #fff;
   border-radius: 2px;
@@ -278,26 +265,32 @@ hr:after {
   left: 15px;
   overflow: hidden;
   padding: 0px;
- img{
-   width: inherit;
-   height: inherit;
+  width: 170px;
+  height: 170px;
   }
-  .add-image{
-    padding: 10px 5px;
-    color: #ffffff;
-    bottom: 0px ;
+  .add-image {
+    color: #1DB4C1;
+    bottom: 0px;
     position: absolute;
-    left: 0px;
-    right: 0px;
-    background-color: #808080;
+    cursor: pointer;
     text-transform: capitalize;
+    font-size: 20px;
+    left: 25px;
+    top: -11px;
+    z-index: 20;
+  }
+  #ajaxStart {
+    display: none;
+    right: -112px;
+    position: relative;
+    color: black;
   }
 }
 
 .page-left-roll-bottom {
   margin: 10px -19px 10px 0px;
   width: 328px;
-  
+
 }
 
 .page-right-roll-bottom {
@@ -338,7 +331,7 @@ hr:after {
     width: 100%;
     padding: 5px;
     height: 60px;
-    color: black; 
+    color: black;
   }
   button {
     padding: 5px;
@@ -349,7 +342,7 @@ hr:after {
   display: none;
 }
 
-.set-publish-button { 
+.set-publish-button {
   padding:3px;
   width: 100%;
   select {
@@ -430,9 +423,11 @@ hr:after {
   color: rgb(85, 85, 85);
   font-size: small;
   .page-about-map {
+    height: 79px;
+    width: 299px;
     img {
-      width: 100%;
-      height: 98px;
+      width: inherit;
+      height: inherit;
     }
   }
 }
@@ -449,7 +444,114 @@ hr:after {
   }
 }
 
-/*.answer-form {
+.upload_log_form, .upload_cover_form {
   display: none;
-}*/
-    
+}
+
+.upload_cover_photo {
+  float: right;
+  position: relative;
+  margin: 10px;
+  font-size: 19px;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+
+.inivteloader {
+  text-align: center;
+  font-size: 40px;
+}
+
+.page_name {
+  color: #fff;
+  -webkit-font-smoothing: antialiased;
+  text-shadow: 0 1px 4px rgba(0, 0, 0, 0.8);
+  word-break: break-word;
+  position: relative;
+  right: -200px;
+  top: 20px;
+  h2 {
+    color: inherit;
+  }
+}
+
+/* CSS used here will be applied after bootstrap.css */
+
+// .dropdown {
+//     display:inline-block;
+//     margin-left:20px;
+//     padding:10px;
+//   }
+
+
+.notifications {
+   min-width:420px;
+   .divider {
+     margin: 0px;
+   }
+  }
+
+  .notifications-wrapper {
+     overflow:auto;
+      max-height:250px;
+  }
+
+ .menu-title {
+     font-size:1.5rem;
+      display:inline-block;
+  }
+
+.glyphicon-circle-arrow-right {
+      margin-left:10px;
+   }
+
+
+ .notification-heading, .notification-footer  {
+ 	padding:2px 10px;
+  width: 100%;
+}
+
+.notification-footer  {
+  text-align: center;
+}
+
+
+.dropdown-menu.divider {
+  margin:5px 0;
+}
+
+.item-title {
+  font-size:1.3rem;
+  color:#000;
+}
+
+.menu-title {
+  text-align: center;
+}
+
+.notification-item {
+  padding:10px;
+  margin:5px;
+  background:#ccc;
+  border-radius:4px;
+ }
+
+ .notifications-wrapper {
+   .activity {
+     padding: 6px;
+     border-bottom: 1px solid #e5e5e5;
+     font-size: inherit;
+     &:hover {
+       background-color: rgba(29, 180, 193, 0.05);
+     }
+   }
+ }
+
+ .activities {
+   list-style-type: none;
+   padding: 10px;
+   li {
+     padding: 10px;
+   }
+ }
