--- a/app/views/activities/favourite/_toggle.html.erb
+++ b/app/views/activities/favourite/_toggle.html.erb
@@ -1,5 +1,4 @@
-
-<% if activity.trackable.present? %>
+<% if activity.trackable %>
     <%= link_to question_path(activity.trackable.question, notification_id: activity.id) do %>
         <p>
           <strong><%=  activity.trackable.user.fullname.humanize  %></strong> favourite your question: <%=  activity.trackable.question.name %><br />
