--- a/app/views/layouts/_leftside.html.erb
+++ b/app/views/layouts/_leftside.html.erb
@@ -1,13 +1,12 @@
-<div class="col-lg-3 col-md-3">
+
 
   <% if current_user %>
-    <div class="sidebarblock">
-      <h3><i class="fa fa-rss"></i> My Feeds <a class="fa fa-plus pull-right" data-toggle="modal" data-target="#myModal"></a></h3>
-      <div class="divline"></div>
+    <div class="leftside">
+      <h5>Categories</h5>
       <div class="blocktxt">
         <ul class="cats">
-          <% current_user.categories.each do |category| %>
-           <li><%= link_to category.name, category %> <span class="remove  fa fa-times  pull-right"></span></li>
+          <%  current_user.categories.each do |category| %>
+           <li><%= link_to category.name, category %></li>
           <% end %>
         </ul>
       </div>
@@ -15,13 +14,13 @@
 <% end %>
 
 
-  <div class="sidebarblock">
-    <h3><i class="fa fa-fire"></i> Popular Threads</h3>
-   <% popular.each do |popular| %>
-    <div class="divline"></div>
-    <div class="blocktxt">
-      <%= link_to popular.name, popular %>
-    </div>
-   <% end %>
+  <div class="leftside">
+    <h5>Pages</h5>
+     <% current_user.pages.each do |page| %>
+      <div class="blocktxt">
+        <ul class="cats">
+        <li><%= image_tag page.logo.url(:lil_image) %> <%= link_to truncate(page.name, :length => 20),  page %></li>
+       </ul>
+      </div>
+     <% end %>
   </div>
-</div>
