--- a/app/views/layouts/_modal.html.erb
+++ b/app/views/layouts/_modal.html.erb
@@ -34,13 +34,13 @@
             <div class="posttext">
               <div>
                 <div class="errors-message"></div>
-                <%= f.input :name, placeholder:"Ask Onozor", input_html: { class: 'form-control' }, label: false  %>
+                <%= f.input :name, placeholder:"Ask Onozor", input_html: { class: 'form-control dec' }, label: false  %>
               </div>
                 <div>
                  <%= f.association :category, collection: current_user.categories.pluck(:name, :id), input_html: {class: 'form-control'}, label: false, prompt: "Select your Category" %>
                 </div>
               <div>
-                <%= f.input :body, input_html: {class: 'form-control', id: 'desc'}, label: false, placeholder:"Describe your question" %>
+                <%= f.input :body, input_html: {class: 'form-control desc_question', id: 'desc'}, label: false, placeholder:"Describe your question" %>
               </div>
             </div>
             <div class="clearfix"></div>
