--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="nav-bar">
+<nav class="nav-bar navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
       <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#bs-navbar" aria-controls="bs-navbar" aria-expanded="false">
@@ -20,19 +20,32 @@
       </div>
     <% end %>
 
-
       <ul class="nav navbar-nav navbar-left col-sm-offset-10">
         <ul class="nav navbar-nav navbar-left">
           <% if user_signed_in? %>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" id="get-notification" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class='fa fa-bell-o'></i><% if current_user.activities.unseen.count > 0 %><span class="badge badge-danger"><%= current_user.activities.unseen.count  %></span><% end %></a>
-                <ul class="dropdown-menu navbar-right notification-bed">
-                  <li><p class="text-center notification-waiter"><i class="fa fa-circle-o-notch fa-spin"></i></p></li>
+                <a href="#" class="dropdown-toggle" id="get-notification" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class='fa fa-bell-o'></i>
+                  <% if current_user.activities.unseen.count > 0 %>
+                  <span class="badge badge-danger">
+                    <%= current_user.activities.unseen.count  %>
+                  </span>
+                  <% end %>
+                </a>
+                <ul class="dropdown-menu notifications" role="menu" aria-labelledby="dLabel">
+                  <div class="notification-heading"><h4 class="menu-title"><strong>Notifications</strong></h4></h4></div>
+                  <li class="divider"></li>
+                 <div class="notifications-wrapper">
+
+                 </div>
+                 <div class="divider"></div>
+                  <div class="notification-footer"><%= link_to 'See all', activities_path, class:"menu-title text-center"  %></div>
                 </ul>
               </li>
           <% end %>
         </ul>
       </ul>
+
+
 
 
       <ul class="nav navbar-nav navbar-right">
@@ -52,9 +65,6 @@
           <li><%= link_to "Login", new_user_session_path %></li>
         <% end %>
       </ul>
-      <% if current_user %>
-        <a href="#"  class='btn  navbar-btn offset-2 topic-button pull-right' data-no-turbolink='true' data-toggle="modal" data-target="#ask-question">Ask a question</a>
-     <% end %>
     </nav>
   </div>
 </nav>
