--- a/app/views/pages/_question_answers.html.erb
+++ b/app/views/pages/_question_answers.html.erb
@@ -10,8 +10,10 @@
         <div class="media-body">
           <p class="media-heading"><strong><%= link_to answer.user.fullname, answer.user %></strong> 
             <%= answer.body %>
+          <% if current_user && current_user.is_the_owner?(current_user, answer) %>  
             <small class='pull-right'><%= link_to "<i class='fa fa-trash'></i> Delete".html_safe, answer_path(answer), 
                  :remote => true, method: :delete %></li></small>
+          <% end %>       
 
           </p>
           <small><%= answer.created_at.strftime("%B %-d at %-l:%M%P") %></small>  
