--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,16 +1,16 @@
 <% title "Signup  Onozor" %>
 <div class="ui middle aligned center aligned grid">
-  <div class="column">
+  <div class="column" style="margin-top: 100px;">
     <%= render partial: 'layouts/flash_messages/flash' %>
 
     <h2 class="ui teal image header">
-      <%= link_to (image_tag "logo-icon.png"), "/", class:"image" %>
+      <%= link_to (image_tag "logo-icon.png"), "/", turbolinks: false, class:"image" %>
     </h2>
     <div class="content">
       <h3>Join Onozor community</h3>
     </div>
     <%= render "devise/sessions/signup" %>
-      <%= render partial: 'layouts/flash_messages/flash' %>
+    
      <div class="ui message">
        <%= render "devise/sessions/third_party_sign_ups" %>
      </div>
