--- a/app/views/layouts/_app_sidenav.html.erb
+++ b/app/views/layouts/_app_sidenav.html.erb
@@ -21,7 +21,7 @@
      <% end %>
   </div>
   <% unless current_user %>
-    <p style="font-size: 1.1em">Don't stay behind. Hang out with smart developers!</p>
+    <p style="font-size: 1.1em">Don't stay behind. Hang out with smart people!</p>
     <button class="ui primary button call-modal"> Sign up </button>
   <% end %>
 </div>
