--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,7 +1,7 @@
-<div class="ui top big fixed small menu">
+<div class="ui top big fixed small menu" data-no-turbolink>
   <div class="ui stacked container">
     <div class="align-logo">
-        <%= link_to (image_tag ("logo-small.png"), width:"150px"), root_url %>
+        <%= link_to (image_tag ("logo-small.png"), width:"150px"), root_url, turbolinks: false %>
     </div>
     <div class="right menu">
         <div class="item">
