fix setting for users

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="ui top big fixed small menu" data-no-turbolink>
+<div class="ui top big fixed small menu">
   <div class="ui stacked container">
     <div class="align-logo">
         <%= link_to (image_tag ("logo-small.png"), width:"150px"), root_url, turbolinks: false %>
