--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -85,6 +85,6 @@
         <% end %>
       </div>
     </div>
-    <!-- <script type="text/javascript">
+    <script type="text/javascript">
       var simplemde = new SimpleMDE({toolbar: ["bold", "italic", "heading", "|", "quote", "code", "image", "link", "|", "unordered-list", "ordered-list", "|", "preview"], autosave: { enabled: true, uniqueId: true }});
-    </script> -->
+    </script>
