--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,64 +1,73 @@
-<div class="post set-padding row">
-<%= form_for(@user, url: user_path(@user), html: { method: :put, multiple: :true, :role=>"form" }) do |f| %>
-    <% if @user.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(@user.errors.count, "error") %> prohibited your account from being created:</h2>
 
-          <ul>
-            <% @user.errors.full_messages.each do |msg| %>
+  <!-- POST -->
+
+  <div class="ui stackable container one column grid left-menu">
+      <div class="ui sixteen card wide column">
+    <%= simple_form_for(@user, url: user_path(@user), html: { method: :put, multiple: :true, :role=>"form newtopic" }) do |f| %>
+       <% if @user.errors.any? %>
+
+        <div class="ui error message">
+            <i class="close icon"></i>
+            <div class="header">
+              There was some errors with your submission
+            </div>
+            <ul class="list">
+              <% @user.errors.full_messages.each do |msg| %>
                 <li><%= msg %></li>
-            <% end %>
-          </ul>
+              <% end %>
+            </ul>
+          </div>
+        <% end %>
+        <div class="ui form">
+
+          <div class="field">
+            <label>Change avatar</label>
+            <%= f.input :avatar, as: :file, id:"exampleInputFile"  %>
+          </div>
+
+          <div class="field">
+            <label>Username</label>
+            <%= f.input :username, placeholder:"Username?", input_html: { class: 'huge' }, label: false  %>
+          </div>
+
+
+
+          <div class="field">
+            <label>First Name</label>
+            <%= f.input :first_name, placeholder:"First Name?", input_html: { class: 'huge' }, label: false  %>
+          </div>
+
+          <div class="field">
+            <label>Last Name</label>
+            <%= f.input :last_name, placeholder:"Last Name?", input_html: { class: 'huge' }, label: false  %>
+          </div>
+
+
+
+          <div class="field">
+            <label>Interest</label>
+            <%= f.input :intrest, placeholder:"Interest", input_html: { class: 'huge' }, label: false  %>
+          </div>
+
+          <div class="field">
+            <label>Biography</label>
+            <%= f.input :bio, input_html: {class: 'form-control', id: 'mytextarea'}, label: false, placeholder:"Biography" %>
+          </div>
+
+          <div class="field">
+            <label>occupation</label>
+            <%= f.input :occupation, input_html: {class: 'form-control', id: 'mytextarea'}, label: false, placeholder:"occupation" %>
+          </div>
+
+            <div class="field">
+              <%= f.input :gender, as: :select,  collection: [:Male, :Female], input_html: {class: 'ui fluid dropdown'}, label: 'Select Category', prompt: "Select your Gender" %>
+            </div>
+
+        <%= f.submit "Update  Account", class:"ui button green huge" %>
         </div>
-    <% end %>
-
-    <div class="form-group">
-    <label for="exampleInputEmail1">Username</label>
-      <%= f.text_field :username, class:"form-control" %>
-  </div>
-  <div class="form-group">
-    <label>First name</label>
-    <%= f.text_field :first_name, class:"form-control"   %>
-  </div>
-
-    <div class="form-group">
-      <label>last name</label>
-      <%= f.text_field :last_name, class:"form-control"   %>
+        <% end %>
+      </div>
     </div>
-
-    <div class="form-group">
-      <label>Gender</label>
-      <%= f.select :gender,  [:Male, :Female], :prompt => 'Select Gender', class:"form-control"  %>
-    </div>
-
-    <div class="form-group">
-      <label>Tell us about your self</label>
-      <%= f.text_area :bio, class:"form-control", rows:"3" %>
-    </div>
-
-    <div class="form-group">
-      <label>Interest</label>
-      <%= f.text_field :intrest, class:"form-control" %>
-    </div>
-
-    <div class="form-group">
-      <label>Occupation</label>
-      <%= f.text_field :occupation, class:"form-control" %>
-    </div>
-
-    <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <%= f.text_field :email, class:"form-control", id:"exampleInputEmail1", placeholder:"Enter email"  %>
-    </div>
-
-    <div class="form-group">
-        <label for="exampleInputFile">Profile Picture</label>
-        <%= f.file_field :avatar, id:"exampleInputFile"  %>
-        <p class="help-block">Please upload a profile picture Max (5mb).</p>
-    </div>
-
-
-<br />
-  <%= f.submit "Update  Account", class:"btn btn-success btn-large" %>
-<% end %>
-</div>
+    <script type="text/javascript">
+      var simplemde = new SimpleMDE({toolbar: ["bold", "italic", "heading", "|", "quote", "code", "image", "link", "|", "unordered-list", "ordered-list", "|", "preview"], autosave: { enabled: true, uniqueId: true }});
+    </script>
