--- a/app/views/follower/followers_update.html.erb
+++ b/app/views/follower/followers_update.html.erb
@@ -1,8 +1,157 @@
 <html>
     <body>
-        <h3>Hi  <%= (@following.username.titleize) %>, </h3>
-        <p><%=  (@follower.username.titleize)  %> is now following you</p>
-        <p>click the link below to reply</p>
-        <%= user_url (@follower) %>
-    </body>
-</html>
+
+<div style="padding:0;margin:0 auto;width:100%!important;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif">
+   <div style="overflow:hidden;color:transparent;width:0;font-size:0;opacity:0;height:0"> Hi <%= (@following.fullname.titleize) %>, You have a new follower on Onozor. </div>
+   <table align="center" border="0" cellspacing="0" cellpadding="0" width="100%" bgcolor="#EDF0F3" style="background-color:#edf0f3;table-layout:fixed">
+      <tbody>
+         <tr>
+            <td align="center">
+               <center style="width:100%">
+                  <table border="0" class="m_6767639596144569214phoenix-email-container" cellspacing="0" cellpadding="0" width="512" bgcolor="#FFFFFF" style="background-color:#ffffff;margin:0 auto;max-width:512px;width:inherit">
+                     <tbody>
+                        <tr>
+                           <td bgcolor="#F6F8FA" style="background-color:#f6f8fa;padding:12px;border-bottom:1px solid #ececec">
+                              <table border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%!important;min-width:100%!important">
+                                 <tbody>
+                                    <tr>
+                                       <td align="left" valign="middle"><a href="http://www.onozor.com" style="color:#008cc9;display:inline-block;text-decoration:none" target="_blank"> <img alt="Onozor" border="0" src="http://onozor.com/assets/logo-icon-4e469d414bfc06f04ec7bc8a53ece630.png" height="40" width="40" style="outline:none;color:#ffffff;text-decoration:none" class="CToWUd"></a></td>
+                                       <td valign="middle" width="100%" align="right" style="padding:0 0 0 10px">
+                                          <%=link_to user_url(@following) do %>
+                                           <span style="word-wrap:break-word;color:#4c4c4c;word-break:break-word;font-weight:400;font-size:14px;line-height:1.429">
+                                             <%= (@following.fullname.titleize) %>
+                                           </span>
+                                          <% end %>
+                                       </td>
+                                       <td valign="middle" width="40" style="padding-left:10px">
+                                         <%=link_to user_url(@following), style:"margin:0;color:#008cc9;display:inline-block;text-decoration:none" do %>
+                                           <%= image_tag @following.avatar.url(:thumb),   border:"0", height:"36", width:"36", style:"border-radius:50%;outline:none;color:#ffffff;text-decoration:none", class:"CToWUd"  %>
+                                         <% end %>
+                                       </td>
+                                       <td width="1">&nbsp;</td>
+                                    </tr>
+                                 </tbody>
+                              </table>
+                           </td>
+                        </tr>
+                        <tr>
+                           <td>
+                              <table border="0" cellspacing="0" cellpadding="0" width="100%">
+                                 <tbody>
+                                    <tr>
+                                       <td>
+                                          <table border="0" cellspacing="0" cellpadding="0" width="100%">
+                                             <tbody>
+                                                <tr>
+                                                   <td style="padding:24px 24px 36px 24px">
+                                                      <table border="0" cellspacing="0" cellpadding="0" width="100%">
+                                                         <tbody>
+                                                            <tr>
+                                                               <td align="left" id="m_6767639596144569214qatest-hero-headline">
+                                                                  <p style="margin:0;word-wrap:break-word;color:#4c4c4c;word-break:break-word;font-weight:400;font-size:16px;line-height:1.5">Hi <%= (@following.fullname.titleize) %>, You have a new follower.</p>
+                                                               </td>
+                                                            </tr>
+                                                            <tr>
+                                                               <td align="left" style="padding:22px 0 16px 0">
+                                                                  <table border="0" cellspacing="0" cellpadding="0" width="100%">
+                                                                     <tbody>
+                                                                        <tr>
+                                                                           <td valign="top" id="m_6767639596144569214qatest-hero-profilepic" style="padding:0 15px 0 0">
+
+                                                                             <%= link_to user_url(@follower), style:"color:#008cc9;display:inline-block;text-decoration:none", target:"_blank" do %>
+                                                                               <%= image_tag @follower.avatar.url(:thumb),   height:"70", width:"70", style:"border-radius:50%;outline:none;color:#ffffff;text-decoration:none", class:"CToWUd"  %>
+                                                                             <% end %>
+                                                                           </td>
+                                                                           <td valign="top" width="100%" id="m_6767639596144569214qatest-hero-profileinfo">
+                                                                              <%= link_to "<span style='word-wrap:break-word;color:#262626;word-break:break-word;font-weight:700;font-size:16px;line-height:1.5'> #{@follower.fullname.titleize} </span>".html_safe, user_url(@follower), target:"_blank" %>
+                                                                              <%  if @follower.bio.nil? %>
+                                                                                <p style="margin:0;word-wrap:break-word;color:#737373;word-break:break-word;font-weight:400;font-size:14px;line-height:1.429"><%=  @follower.categories.map{|a| a.name }.take(5).join(", ").html_safe %></p>
+                                                                              <% else %>
+                                                                              <p style="margin:0;word-wrap:break-word;color:#737373;word-break:break-word;font-weight:400;font-size:14px;line-height:1.429"><%=  @follower.bio %></p>
+                                                                              <% end %>
+                                                                           </td>
+                                                                        </tr>
+                                                                     </tbody>
+                                                                  </table>
+                                                               </td>
+                                                            </tr>
+                                                            <tr>
+                                                              <td dir="rtl" align="left" style="direction:rtl!important;text-align:left!important">
+                                                <span id="m_6767639596144569214qatest-cta-accept" style="display:inline-block;margin-top:12px">
+                                                   <table border="0" cellpadding="0" cellspacing="0" style="display:inline-block">
+                                                      <tbody>
+                                                         <tr>
+                                                            <td align="center" valign="middle">
+                                                              <%= link_to user_url(@follower), style:"word-wrap:normal;color:#008cc9;word-break:normal;white-space:nowrap;display:block;text-decoration:none", target:"_blank" do  %>
+                                                                  <table border="0" cellspacing="0" cellpadding="0" width="auto">
+                                                                     <tbody>
+                                                                        <tr>
+                                                                           <td bgcolor="#0AB3C1" style="padding:6px 16px;color:#ffffff;font-weight:500;font-size:16px;border-color:#0AB3C1;background-color:#0AB3C1;border-radius:2px;border-width:1px;border-style:solid">
+                                                                 <%= link_to "Follow", user_url(@follower), style:"color:#ffffff;display:inline-block;text-decoration:none", target:"_blank" %>
+                                                               <% end %>
+                                                            </td>
+                                                         </tr>
+                                                      </tbody>
+                                                   </table>
+                                                </span>
+
+                                             </td>
+                                          </tr>
+                                       </tbody>
+                                    </table>
+                                 </td>
+                              </tr>
+                           </tbody>
+                        </table>
+                     </td>
+                  </tr>
+               </tbody>
+            </table>
+         </td>
+      </tr>
+      <tr>
+         <td>
+            <table border="0" cellspacing="0" cellpadding="0" width="100%" bgcolor="#EDF0F3" align="center" style="background-color:#edf0f3;padding:0 24px;color:#999999;text-align:center">
+               <tbody>
+                  <tr>
+                     <td align="center" style="padding:16px 0 0 0;text-align:center">
+                        <table align="center" border="0" cellspacing="0" cellpadding="0" width="100%">
+                           <tbody>
+                              <tr>
+                                 <td valign="middle" align="center" style="padding:0 0 16px 0;vertical-align:middle;text-align:center"><a href="http://www.onozor.com" style="color:#737373;text-decoration:underline;display:inline-block" target="_blank">
+                              </tr>
+                           </tbody>
+                        </table>
+                     </td>
+                  </tr>
+                  <tr>
+                     <td>
+                        <table border="0" cellspacing="0" cellpadding="0" width="100%">
+                           <tbody>
+
+
+                              <tr>
+                                 <td align="center" style="padding:0 0 12px 0;text-align:center">
+                                    <span dir="ltr">
+                                       <p style="margin:0;color:#737373;font-weight:400;font-size:12px;line-height:1.333">© <%= Time.now.year %> Onozor Nigeria, No 2. Dankaro Estate Beger Lagos, Nigeria. Onozor is a registered business name of Onozor LTD. Onozor and the Onozor logo are registered trademarks of Onozor.</p>
+                                    </span>
+                                 </td>
+                              </tr>
+                           </tbody>
+                        </table>
+                     </td>
+                  </tr>
+               </tbody>
+            </table>
+         </td>
+      </tr>
+   </tbody>
+</table>
+</center>
+</td>
+</tr>
+</tbody>
+</table>
+<div class="yj6qo"></div>
+<div class="adL"> </div>
+</div>
