--- a/app/views/layouts/display.html.erb
+++ b/app/views/layouts/display.html.erb
@@ -7,7 +7,23 @@
       <%= stylesheet_link_tag  'https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.0.0/semantic.min.css', 'application', media: "all", "data-turbolinks-track" => true %>
       <%= javascript_include_tag  'application', "data-turbolinks-track" => true %>
 
-
+      <link rel="apple-touch-icon" sizes="57x57" href="http://res.cloudinary.com/sportbay-co/image/upload/v1478176359/Favicon/apple-icon-57x57.png">
+      <link rel="apple-touch-icon" sizes="60x60" href="http://res.cloudinary.com/sportbay-co/image/upload/v1478176359/Favicon/apple-icon-60x60.png">
+      <link rel="apple-touch-icon" sizes="72x72" href="http://res.cloudinary.com/sportbay-co/image/upload/v1478176359/Favicon/apple-icon-72x72.png">
+      <link rel="apple-touch-icon" sizes="76x76" href="http://res.cloudinary.com/sportbay-co/image/upload/v1478176359/Favicon/apple-icon-76x76.png">
+      <link rel="apple-touch-icon" sizes="114x114" href="http://res.cloudinary.com/sportbay-co/image/upload/v1478176359/Favicon/apple-icon-114x114.png">
+      <link rel="apple-touch-icon" sizes="120x120" href="http://res.cloudinary.com/sportbay-co/image/upload/v1478176359/Favicon/apple-icon-120x120.png">
+      <link rel="apple-touch-icon" sizes="144x144" href="http://res.cloudinary.com/sportbay-co/image/upload/v1478176359/Favicon/apple-icon-144x144.png">
+      <link rel="apple-touch-icon" sizes="152x152" href="http://res.cloudinary.com/sportbay-co/image/upload/v1478176359/Favicon/apple-icon-152x152.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="http://res.cloudinary.com/sportbay-co/image/upload/v1478176359/Favicon/apple-icon-180x180.png">
+      <link rel="icon" type="image/png" sizes="192x192"  href="http://res.cloudinary.com/sportbay-co/image/upload/v1478176359/Favicon/android-icon-192x192.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="http://res.cloudinary.com/sportbay-co/image/upload/v1478176359/Favicon/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="96x96" href="http://res.cloudinary.com/sportbay-co/image/upload/v1478176359/Favicon/favicon-96x96.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="http://res.cloudinary.com/sportbay-co/image/upload/v1478176359/Favicon/favicon-16x16.png">
+      <link rel="manifest" href="https://cloudinary.com/console/media_library#/dialog/raw/upload/Favicon/manifest.json">
+      <meta name="msapplication-TileColor" content="#ffffff">
+      <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+      <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <% if current_user %>
