--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -21,7 +21,7 @@
             <%= time_ago_in_words question.created_at %> ago
           </div>
           <div class="summary" id='user_details' style="font-size: smaller; color: #676868;">
-             <%= link_to  (question.user.fullname? ? question.user.fullname : question.user.username), user_path(question.user) %>. interested in <%=   question.user.intrest %>
+             <%= link_to  (question.user.fullname.titleize), user_path(question.user) %>. interested in <%=   question.user.intrest %>
              <%= pluralize question.user.followers.count, "followers" %>. <%=  question.user.categories.map{|a|  a.name }.take(3).join(", ").html_safe %>
           </div>
         </div>
@@ -29,7 +29,7 @@
     </div>
     <div class="item">
       <div class="content">
-        <div class="header question-link"><%=link_to question.name, question %></div>
+        <div class="header question-link"><%= link_to question.name.capitalize, question %></div>
         <div class="description question-description">
           <p><%= truncate (strip_tags question.body), length: 150 %></p>
         </div>
