feat(): add sharing funtionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
                 Get Started Now
               </a>
               <div>
-              
+
             </div>
             </div>
           </div>
@@ -68,5 +68,6 @@
         <%= render partial: 'layouts/modal' %>
     </div>
     </div>
+    <!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5102746f4f07e5b2"></script> 
   </body>
 </html>
