--- a/app/views/questions/_share_modal.html.erb
+++ b/app/views/questions/_share_modal.html.erb
@@ -7,34 +7,35 @@
     <h3 class="share-name header"></h3>
     <div  class="ui centered content-margin grid">
         <div class="three wide">
-          <button class="ui circular facebook icon button">
+          <a class="ui circular facebook icon button" id="facebook" target="_blank">
             <i class="facebook big icon"></i>
-          </button>
+          </a>
         </div>
+
         <div class="three wide">
-          <button class="ui circular twitter icon button">
+          <a class="ui circular twitter icon button" id="twitter" target="_blank">
             <i class="twitter big icon"></i>
-          </button>
+          </a>
         </div>
         <div class="three wide">
-          <button class="ui circular linkedin icon button">
+          <a class="ui circular linkedin icon button" id="linkedin" target="_blank">
             <i class="linkedin  big icon"></i>
-          </button>
+          </a>
         </div>
         <div class="three wide">
-          <button class="ui circular google plus icon button">
+          <a class="ui circular google plus icon button" target="_blank" id="google-plus">
             <i class="google plus big icon"></i>
-          </button>
+          </a>
         </div>
         <div class="three wide">
-          <button class="ui circular google plus icon button">
+          <a class="ui circular google plus icon button" target="_blank" id="reddit">
             <i class="reddit alien big icon"></i>
-          </button>
+          </a>
         </div>
         <div class="three wide">
-          <button class="ui circular google plus icon button">
+          <a class="ui circular google plus icon button" target="_blank" id="hacker">
             <i class="hacker news big icon"></i>
-          </button>
+          </a>
         </div>
   </div>
   <p align='center' class="centered">Or share the following link</p>
