--- a/app/views/layouts/_app_sidenav.html.erb
+++ b/app/views/layouts/_app_sidenav.html.erb
@@ -1,4 +1,4 @@
-<div class="three wide column">
+<div class="three wide column computer tablet only">
   <div class="ui secondary fluid vertical pointing menu">
    <% if current_user %>
      <div class="ui fluid category  search">
