--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -46,7 +46,7 @@
            <%= allow_ajax_only_if_user_is_signin_for_downvote_question(@question) %>
 
           <% if current_user.present? %>
-          &nbsp;  &nbsp; &nbsp; <button class="ui mini secondary button" id="show-answer-form">  <i class="icon write"></i> Add Answer</button>
+
            &nbsp;  &nbsp; <%= link_to " Add a comment", new_comment_path(:comment => { :commentable_type => @question.class.name,
                          :commentable_id => @question.id}),
                          :remote => true,
@@ -61,9 +61,10 @@
       </div>
     </div>
 
-    <div id="answer-form-center">
+
+
         <%= render "answers/form" %>
-    </div>
+
 
     <% if @question.answers.present? %>
       <h4 class="ui horizontal divider header dash_header">Answers</h4>
@@ -78,35 +79,31 @@
   <div class="four wide column">
     <p class="side-label">Share this question</p>
     <div class="ui tiny horizontal list">
-      <a class="item">
+      <a class="item" target="_blank" href="https://www.facebook.com/dialog/share?app_id=484766111702543&href=<%= question_url(@question) %>&redirect_uri=http://www.onozor.com">
         <i class=" big facebook icon"></i>
       </a>
-      <a class="item">
+      <a class="item" target="_blank" href="https://twitter.com/share?url=<%= question_url(@question) %>&text=<%= @question.name %>">
         <i class=" big twitter icon"></i>
       </a>
-      <a class="item">
+      <a class="item" target="_blank" href="https://plus.google.com/share?url=<%= question_url(@question) %>">
         <i class=" big google plus square icon"></i>
       </a>
-      <a class="item">
+      <a class="item" target="_blank" id="reddit" href="http://www.reddit.com/submit?url=<%= question_url(@question) %>&title=<%= @question.name %>">
         <i class="reddit big icon"></i>
       </a>
     </div>
 
 
-    <button class="big ui button">Ask your followers</button>
+    <!-- <button class="big ui button ask-some-one-button">Ask someone you know</button> -->
 
     <div class="ui items">
     <p class="side-label"><i class="browser icon"></i>
     Question you may like</p>
 
     <div class="ui list you-may-like">
-      <a class="item">What happned to Jenny Hess and James brand?</a>
-      <a class="item">Whay do I keep failing maths?</a>
-      <a class="item">What happned to Jenny Hess?</a>
-      <a class="item">Whay do I keep failing maths?</a>
-      <a class="item">Why is Englih so Important in SSCE</a>
-      <a class="item">Whay do I keep failing maths?</a>
-      <a class="item">What happned to Jenny Hess?</a>
+      <% @similar_question.each do |question|%>
+       <%= link_to question.name, question, class:"item" %>
+      <% end %>
     </div>
 
     <div class="ui tiny horizontal list">
